src/objects/Assessment_NF__c.object
<CustomObject>
    <fields>
        <fullName>Work_to_be_done_to_achieve_objective_O2__c</fullName>
        <label>Work to be done to achieve objective -O2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Work_to_be_done_to_achieve_objective_O3__c</fullName>
        <label>Work to be done to achieve objective -O3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>X1_Use_of_alcohol_is_out_of_control__c</fullName>
        <inlineHelpText>1. Do you think your use of ……….. (preference alcohol) is out of control?</inlineHelpText>
        <label>1. Use of alcohol is out of control?</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X1_Use_of_drug_is_out_of_control__c</fullName>
        <label>1. Use of drug is out of control?</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Prospect_of_not_taking_alcohol__c</fullName>
        <inlineHelpText>2. Does the prospect of not taking …..make you anxious or worried?</inlineHelpText>
        <label>2. Prospect of not taking alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X2_Prospect_of_not_taking_drug__c</fullName>
        <inlineHelpText>2. Does the prospect of not taking …..make you anxious or worried?</inlineHelpText>
        <label>2. Prospect of not taking drug</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Worried_about_your_use_of_alcohol__c</fullName>
        <inlineHelpText>3. Do you worry about your use of ……..?</inlineHelpText>
        <label>3. Worried about your use of alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X3_Worried_about_your_use_of_drug__c</fullName>
        <inlineHelpText>3. Do you worry about your use of ……..?</inlineHelpText>
        <label>3. Worried about your use of drug</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4_Did_you_wish_you_could_stop_alcohol__c</fullName>
        <label>4. Did you wish you could stop alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X4_Did_you_wish_you_could_stop_drug__c</fullName>
        <label>4. Did you wish you could stop drug</label>
        <picklist>
            <picklistValues>
                <fullName>Never / almost never</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sometimes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Often</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Always / nearly always</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_How_difficult_is_to_stop_alcohol__c</fullName>
        <label>5. How difficult is to stop alcohol</label>
        <picklist>
            <picklistValues>
                <fullName>Not difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impossible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>X5_How_difficult_is_to_stop_drugs__c</fullName>
        <label>5. How difficult is to stop drugs</label>
        <picklist>
            <picklistValues>
                <fullName>Not difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quite Difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very difficult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impossible</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>You_place_yourself_on_wheel_of_change__c</fullName>
        <inlineHelpText>Worker is to explain the wheel of change diagram.
Where would you place yourself on the wheel of change?</inlineHelpText>
        <label>You place yourself on wheel of change?</label>
        <picklist>
            <picklistValues>
                <fullName>Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relapse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Comtemplation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comtemplation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Determination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Assessment (National Framework)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{YYYY}-{0000}</displayFormat>
        <label>Assessment (National Framework) Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessments (National Framework)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>